example/secondfile/objects/RestAPIUserHistory__c.object
<CustomObject>
    <fields>
        <fullName>LoggedInDate__c</fullName>
        <formula>TEXT( DATEVALUE(LoginDateTime__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedInDay__c</fullName>
        <formula>CASE( MOD( DAY(DATEVALUE( LoginDateTime__c))-1, 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, 
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInDay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedInHour__c</fullName>
        <formula>VALUE( MID( TEXT(LoginDateTime__c-(6/24)), 12, 2 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInHour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoginDateTime__c</fullName>
        <label>LoginDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>RestAPI_UserHistory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RestAPI_UserHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RestAPI_UserHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>